force-app/main/default/objects/Integration_Endpoint__mdt/Integration_Endpoint__mdt.object-meta.xml
<CustomObject>
    <label>Integration Endpoint</label>
    <pluralLabel>Integration Endpoints</pluralLabel>
    <description>Centralized configuration for external integration endpoints including URLs, timeouts, and retry policies. Used to route enrollment system callouts without hardcoding endpoints in Apex or Flows.</description>
</CustomObject>