force-app/main/default/objects/Integration_Endpoint__mdt/fields/Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_URL__c</fullName>
    <label>Endpoint URL</label>
    <type>Url</type>
    <required>true</required>
    <description>Base URL of the external system endpoint. Should match the URL configured in the corresponding Named Credential.</description>
</CustomField>