force-app/main/default/objects/Integration_Endpoint__mdt/fields/Max_Retries__c.field-meta.xml
<CustomField>
    <fullName>Max_Retries__c</fullName>
    <label>Max Retries</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>3</defaultValue>
    <required>true</required>
    <description>Maximum number of automatic retry attempts for failed callouts (e.g., 5xx errors, timeouts). Batch/Queueable jobs use this to determine retry loop count.</description>
</CustomField>