force-app/main/default/objects/Integration_Endpoint__mdt/fields/Retry_Backoff_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Retry_Backoff_Seconds__c</fullName>
    <label>Retry Backoff Seconds</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>5</defaultValue>
    <required>true</required>
    <description>Seconds to wait between consecutive retry attempts (exponential backoff multiplier). Prevents retry storms against degraded endpoints.</description>
</CustomField>