force-app/main/default/objects/Integration_Endpoint__mdt/fields/System_Name__c.field-meta.xml
<CustomField>
    <fullName>System_Name__c</fullName>
    <label>System Name</label>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
    <description>Unique identifier for the external system (e.g., 'Core Admin System', 'Billing System'). Used as lookup key in Apex and Flows.</description>
</CustomField>