force-app/main/default/objects/Integration_Endpoint__mdt/fields/Timeout_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Timeout_Seconds__c</fullName>
    <label>Timeout Seconds</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>30</defaultValue>
    <required>true</required>
    <description>HTTP request timeout in seconds. Used to configure HttpRequest.setTimeout() in callout handlers.</description>
</CustomField>